MP-2007-03-21-0: Enhancem.: Test logging of invalid qmaster parameters values
                 Changed:   Added qmaster/cluster_config
                 Review:    JG

JG-2007-03-14-0: Bugfix:    Fixed date/time parsing.
                            Disable broken qstat -xml tests. Cleanup.
                 Review:    RD

AP-2007-03-12-0: Bugfix:    o arco dbwriter install test failed when installing
                              arco version 6.0x.
                 Review:    JO

MP-2007-03-12-0: Enhancem.: New test for CR 6288953
                 Changed:   qdel
                 Review:    JG

JG-2007-03-09-0: Bugfix:    Fixed qstat test (-U, profile),
                            started to fix qstat -xml tests.
                 Review:    CR

RH-2007-03-06-0: Bugfix:    o arco reporting install test failed when installing
                              arco version 6.0x.
                 Review:    AA

JG-2007-03-02-0: Enhancem.: New test for issue 2202.
                            Some cleanup.
                 Review:    CR

AP-2007-03-01-0: Enhancem.: Adding more run levels to dbwriter performance test
                 Bugfix:    ARCo test dependencies
                 Review:    JO, AP
           
GH-2007-02-23-0: Bugfix:    IZ 117: Test qstat_option_s is broken
                 Enhancem.: IZ 121: Need test for CR 6452471
                 Review:    JG

MD-2007-02-14-0: Enhancem.: Added submithost install and copycert test
                 Review:    JG

JG-2007-02-12-1: Enhancem.: Verify product_type depending on gridengine version.
                 Review:    AP, MD, MP

JG-2007-02-12-0: Enhancem.: Renamed gridengine_version 65 to 61.
                            Created gridengine_version 62.
                 Review:    AP, MD, MP

JG-2007-02-09-0: Enhancem.: If a L10N messages file (msg_*.h) has been modified,
                            update testsuite's messages cache.
                 Issue:     74