@@ -151,12 +151,16 @@ proc issue_1802_test {} {
       set sge_ca_bin "$ts_config(product_root)/util/sgeCA/sge_ca"
       set qstat_bin  "$ts_config(product_root)/bin/$CHECK_ARCH/qstat"
       if { $CHECK_ACT_LEVEL == 0 } {
-         set UNABLE_CONNECT [translate $ts_config(master_host) 0 1 0 [sge_macro MSG_GDI_UNABLE_TO_CONNECT_SUS] "qmaster" $ts_config(commd_port) "*" ]
-         set USER_CERT_EXPIRED [translate $ts_config(master_host) 0 1 0 [sge_macro MSG_CL_COMMLIB_SSL_ERROR_336151573]]
-         set SSL_HS_ERROR [translate $ts_config(master_host) 0 1 0 [sge_macro MSG_CL_COMMLIB_SSL_HANDSHAKE_ERROR]]
+         set USER_CERT_EXPIRED [translate_macro MSG_CL_COMMLIB_SSL_ERROR_336151573]
+         set SSL_HS_ERROR [translate_macro MSG_CL_COMMLIB_SSL_HANDSHAKE_ERROR]
+         if {$ts_config(gridengine_version) == 60} {
+            set UNABLE_CONNECT [translate_macro MSG_GDI_UNABLE_TO_CONNECT_SUS "qmaster" $ts_config(commd_port) "*" ]
+         } else {
+            set UNABLE_CONNECT [translate_macro MSG_GDI_CANT_SEND_MSG_TO_PORT_ON_HOST_SUSS "qmaster" $ts_config(commd_port) "*" "*"]
+         }
 
          puts $CHECK_OUTPUT "starting qstat -f ..."
-         set output [start_remote_prog $CHECK_HOST $CHECK_USER $qstat_bin "-f" ]
+         set output [start_remote_prog $CHECK_HOST $CHECK_USER $qstat_bin "-f"]
          puts $CHECK_OUTPUT "exit state of qstat: $prg_exit_state"
          if { $prg_exit_state != 0 } {
             add_proc_error "issue_1802_test" -1 "qstat exit state is $prg_exit_state, expected 0\n$output"
