@@ -728,7 +728,7 @@ proc get_sge_error_generic_vdep {messages_var} {
 
    # CSP errors
    lappend messages(index) "-100"
-   set messages(-100) "*[translate_macro MSG_SEC_KEYFILENOTFOUND_S "*"]*"
+   set messages(-100) "*[translate_macro MSG_CL_RETVAL_SSL_COULD_NOT_SET_CA_CHAIN_FILE]*"
 
    # generic communication errors
    lappend messages(index) "-120"
